# rust-boids

./: .gitignore  Cargo.toml  README.md
src/: boids.rs  lib.rs  main.rs
