[package]
name = "rust-boids"
version = "0.1.0"
authors = ["Mike Goddard"]

[lib]
name="rustboidslib"
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[[bin]]
name = "rustboidsbin"
path = "src/main.rs"

[dependencies.fungine]
git = "https://github.com/mcgoddard/fungine.git"
branch = "udp_worker"

[dependencies]
cgmath = "0.14.1"
stopwatch = "0.0.7"
serde = "1.0"
serde_derive = "1.0"
rand = "0.3"
